перевод должностей и регионов

--- a/factory/templates/factory/factory.html
+++ b/factory/templates/factory/factory.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="row" style="margin-top: 1%;">
                         <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-                            Група товаров
+                            Группа товаров
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                             <select id="group">
