--- a/region/templates/region/redesign/region_info.html
+++ b/region/templates/region/redesign/region_info.html
@@ -9,7 +9,7 @@
   cursor: pointer;">
 
 <div class="map__info-mid">
-<h2>{{ region.region_name }}</h2>
+<h2>{% trans region.region_name context "regions_list" %}</h2>
 
 <div class="map__info-mid-botttom">
   <!--список ресурсов-->
