--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -169,7 +169,7 @@
           </div>
           <!--Блок ОБЛАСТЬ-->
           <div class="overview__view-info ct__view-info">
-            <h2>{{ player.region.region_name }}</h2>
+            <h2>{% trans player.region.region_name context "regions_list" %}</h2>
             <ul class="ct__view-info-list">
               <li class="ct__view-info-item">
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
