--- a/region/templates/region/redesign/map.html
+++ b/region/templates/region/redesign/map.html
@@ -258,7 +258,7 @@
         {% with map_shape=shapes_dict|dict_key:player.region.pk %}
      var mymap = L.map('mapid', { zoomControl: false, maxBounds: bounds, maxBoundsViscosity: 1.0, minZoom: 2 }).setView([{{ player.region.latitude }}, {{ player.region.longitude }}], {{ map_shape.zoom }});
        {% endwith %}
-     L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+     L.tileLayer('https://basemap.nationalmap.gov/arcgis/rest/services/USGSImageryOnly/MapServer/tile/{z}/{y}/{x}', {
      attribution: '',
      minZoom: 2,
      maxZoom: 18,
@@ -303,4 +303,27 @@
  {% endwith %}
  {% endfor %}
  </script>
+
+<!-- костыльный блок: тексты всех имен регионов -->
+<!-- необходимо для того, чтобы переводчик подтянул их в файлы PO -->
+{% trans 'Тюрингия' context "regions_list" %}
+
+{% trans 'Саксония' context "regions_list" %}
+
+{% trans 'Чехия' context "regions_list" %}
+
+{% trans 'Нижнесилезское воеводство' context "regions_list" %}
+
+{% trans 'Любушское воеводство' context "regions_list" %}
+
+{% trans 'Бавария' context "regions_list" %}
+
+{% trans 'Бранденбург' context "regions_list" %}
+
+{% trans 'Саксония-Анхальт' context "regions_list" %}
+
+{% trans 'Австрия' context "regions_list" %}
+
+{% trans 'Опольское воеводство' context "regions_list" %}
+<!-- костыльный блок: тексты всех имен регионов -->
 {% endblock %}
