--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -20,7 +20,7 @@
 </style>
 <section class="store custom-scroll">
     <h1 class="store__title ct__page-title">{% trans 'Склад' context "storage" %}</h1>
-	<button class="store__title-settings ct__js-modal-sett-open" id="store__modal1-open">
+	<button class="store__title-settings ct__js-modal-sett-open" id="store__modal1-open" style="cursor: pointer;">
 		<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
 	width="80px" height="76px" viewBox="0 0 1280.000000 1276.000000"
 	preserveAspectRatio="xMidYMid meet">
