ссылка на страницу переводов

--- a/player/templates/player/redesign/player_status.html
+++ b/player/templates/player/redesign/player_status.html
@@ -85,24 +85,29 @@
           </svg>
         </a>
       </li>
+		{% if translator %}
 	  <li class="info__soc-item">
         <a href="/translations/" class="info__soc-link" target="_blank" rel="noopener noreferrer">
 			<svg
-			   width="48"
-			   height="48"
-			   viewBox="0 0 48 48"
+			   width="30"
+			   height="30"
+			   viewBox="0 0 30 30"
 			   version="1.1"
 			   >
 			  <path
-				 d="M0 0h48v48h-48z"
-				 fill="none"
-				 id="path2" />
+				 d="m 15.798073,18.038554 -2.2956,-2.574033 0.02711,-0.03076 c 1.572577,-1.989492 2.693264,-4.276382 3.353024,-6.696588 h 2.648074 V 6.6810176 H 13.204226 V 4.6299952 h -1.80756 V 6.6810176 H 5.0702076 V 8.7217854 H 15.165428 C 14.555377,10.701021 13.601889,12.577707 12.300446,14.218525 11.459931,13.157121 10.76402,12.003421 10.212714,10.783062 H 8.4051546 c 0.659759,1.671584 1.563539,3.250871 2.6932644,4.676331 l -4.5957204,5.153194 1.278848,1.451098 4.5188994,-5.127556 2.810755,3.18934 z m 5.088281,-5.204469 h -1.80756 l -4.067009,12.306134 h 1.80756 l 1.016752,-3.076534 h 4.292954 l 1.016752,3.076534 h 1.807559 z m -2.372422,7.178578 1.468642,-4.445591 1.468642,4.445591 z"
+				 fill="var(--c10two)"
+				 id="path7"
+				 style="display:inline;fill:var(--c10two);fill-opacity:1;stroke-width:0.481362" />
 			  <path
-				 d="M25.74 30.15l-5.08-5.02.06-.06c3.48-3.88 5.96-8.34 7.42-13.06h5.86v-4.01h-14v-4h-4v4h-14v3.98h22.34c-1.35 3.86-3.46 7.52-6.34 10.72-1.86-2.07-3.4-4.32-4.62-6.7h-4c1.46 3.26 3.46 6.34 5.96 9.12l-10.17 10.05 2.83 2.83 10-10 6.22 6.22 1.52-4.07zm11.26-10.15h-4l-9 24h4l2.25-6h9.5l2.25 6h4l-9-24zm-5.25 14l3.25-8.67 3.25 8.67h-6.5z"
+				 d="m 5.3853946,2.3853893 c -1.64971,0 -3,1.35029 -3,3 V 24.585399 c 0,1.6497 1.35029,3 3,3 H 24.585395 c 1.6497,0 3,-1.3503 3,-3 V 5.3853893 c 0,-1.64971 -1.3503,-3 -3,-3 z m 0,1.2 H 24.585395 c 1.0011,0 1.8,0.79891 1.8,1.8 V 24.585399 c 0,1.0011 -0.7989,1.8 -1.8,1.8 H 5.3853946 c -1.00109,0 -1.8,-0.7989 -1.8,-1.8 V 5.3853893 c 0,-1.00109 0.79891,-1.8 1.8,-1.8 z"
+				 fill="var(--c10two)"
+				 id="path8"
 				 fill="var(--c10two)" />
 			</svg>
         </a>
       </li>
+		{% endif %}
     </ul>
 
 </header>
