--- a/storage/templates/storage/redesign/assets.html
+++ b/storage/templates/storage/redesign/assets.html
@@ -40,7 +40,7 @@
                         <path d="M6.5 4.5L4.5 6.5V20.5H18.5L20.5 18.5V4.5H6.5Z" fill="var(--c10two)" stroke="var(--c10two)"/>
                     </svg>
                 </span>
-                уверен
+                {% trans 'уверен' context "assets" %}
             </label>
         </div>
         <!--Выбор склада-->
